--- a/all/views/index.ejs
+++ b/all/views/index.ejs
@@ -1,7 +1,7 @@
 <% include partials/header.ejs %>
 
 <div class="a">
-        <h1>Top Rated Movies</h1>
+        <h1>Top Rated  </h1>
         <div class="p">
       <div class="row" style="display: flex; flex-wrap: wrap">
 <% movies.results.forEach(function(movie){ %>
