--- a/all/public/style.css
+++ b/all/public/style.css
@@ -1,13 +1,32 @@
-.p{
-margin-top:50px;
 
-}
-.a{
-    margin-top:80px;
-}
-body{
-    background-color: purple;
-}
 img{
     width: 100%;
+}
+.down{
+background-color: black;
+width: 100%;
+height: 200px;
+}
+.search{
+
+    margin-top:80px;
+}
+.button{
+
+    background-color:black;
+    color: white;
+    margin-left: 20px;
+    margin-bottom: 50px;
+    
+}
+.button:hover{
+    background-color: gray;
+ 
+}
+
+#bt{
+
+width:360px;
+margin: 20px auto;
+
 }
