--- a/all/views/partials/header.ejs
+++ b/all/views/partials/header.ejs
@@ -19,16 +19,30 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Moviesite</a>
+            <a class="navbar-brand" href="/">Moviesite</a>
           </div>
+          
           <div id="navbar" class="collapse navbar-collapse">
+              
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
+              <li><a href="/">Home</a></li>
+            
               <li><a href="#about">Discover</a></li>
               <li><a href="#contact">Most-viewed</a></li>
+              <li><a href="#contact">Movies</a></li>
+              <li><a href="#contact">TV Shows</a></li>
             </ul>
           </div><!-- /.nav-collapse -->
         </div><!-- /.container -->
       </nav><!-- /.navbar -->
-
+<div class="search">
+  <form>
+    <div class="form-group">
+ 
+      <input type="text" class="form-control"  placeholder="Search Movie, Tv Shows">
+      <small id="emailHelp" class="form-text text-muted">Browse all your favourite Movies and TV shows</small>
+    </div>
+    <button type="button" class="btn btn-dark button" >Let's Go!</button>
+  </form>
+</div>
 
