--- a/all/views/partials/headers.ejs
+++ b/all/views/partials/headers.ejs
@@ -37,17 +37,12 @@
       </nav><!-- /.navbar -->
       <div class="container">
 <div class="search">
-
-
-    <form action="/get" method="POST">
-      <div class='form-group'><input type="text" name="name" placeholder="Search Movie, Tv Shows" class='form-control'></div>
-     
-      
-      <button class="btn  btn-dark">Let's Go!</button>
-        </form>
-
-
- 
-        
+  
+    <form action="/campgrounds" method="POST">
+        <div class='form-group'><input type="text" name="name" placeholder="Name" class='form-control'></div>
+        <div class='form-group'><input type="text" name="image" placeholder="Image Url" class='form-control'></div>
+        <div class='form-group' ><input type="text" name="desc" placeholder="Description" class='form-control'></div>
+        <button class="btn btn-lg btn-primary btn-block">Create</button>
+          </form>
 </div>
 
