--- a/all/views/partials/header.ejs
+++ b/all/views/partials/header.ejs
@@ -40,7 +40,7 @@
 
 
     <form action="/get" method="POST">
-      <div class='form-group'><input type="text" name="name" placeholder="Search Movie, Tv Shows" class='form-control'></div>
+      <div class='form-group'><input type="text" name="name" placeholder="Search Movie, Tv Shows" class='form-control' required></div>
      
       
       <button class="btn  btn-dark">Let's Go!</button>
