--- a/all/views/show.ejs
+++ b/all/views/show.ejs
@@ -1,16 +1,17 @@
 <% include partials/header.ejs %>
 
  <% console.dir(item) %>
- <div id="moviebox">
+ <div id="moviebox" >
    <div class="row" style="border:4px solid black">
-<div class="col-md-4" style="padding:0">
+<div class="col-md-4">
         <img src="https://image.tmdb.org/t/p/w500<%= item.poster_path %>" alt="" >
       
 
 </div>
 <div class="col-md-8">
 
-
+      <div id="mydiv">  <img src="https://image.tmdb.org/t/p/w500<%= item.backdrop_path %>"></div>
+       
 
 
     
