--- a/all/public/style.css
+++ b/all/public/style.css
@@ -54,3 +54,13 @@ margin: auto;
 margin-top:7%;
 
 }
+.trailer-box{
+
+width:800px;
+margin-top:40px;
+margin-left:auto;
+margin-right: auto;
+
+
+
+}
