--- a/all/views/show.ejs
+++ b/all/views/show.ejs
@@ -10,9 +10,9 @@
 </div>
 <div class="col-md-8">
 
-      <div id="mydiv">  <img src="https://image.tmdb.org/t/p/w500<%= item.backdrop_path %>"></div>
+     <div id="mydiv">  <img src="https://image.tmdb.org/t/p/w500<%= item.backdrop_path %>"></div>
        
-
+ 
 
     
 </div>
@@ -20,6 +20,19 @@
    </div>
 
 </div>
+<div class="trailer-box">
+
+
+      <iframe width="800" height="400" src="https://www.youtube.com/embed/<%= trailer.videos.results[0].key %>?rel=0&amp;start=5" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+     
+
+
+</div>
+     
+
+
+
+
 
 
 
