--- a/all/views/show.ejs
+++ b/all/views/show.ejs
@@ -1,5 +1,5 @@
 <% include partials/header.ejs %>
-
+</div>
  <% console.dir(item) %>
  <div id="moviebox" >
    <div class="row" style="border:4px solid black">
@@ -10,7 +10,10 @@
 </div>
 <div class="col-md-8">
 
-     <div id="mydiv">  <img src="https://image.tmdb.org/t/p/w500<%= item.backdrop_path %>"></div>
+     <div id="mydiv">  <img src="https://image.tmdb.org/t/p/w500<%= item.backdrop_path %>" style="position: relative;">
+
+
+</div>
        
  
 
@@ -20,6 +23,8 @@
    </div>
 
 </div>
+
+<div class="pp">
 <div class="trailer-box">
 
 
@@ -29,7 +34,7 @@
 
 </div>
      
-
+</div>
 
 
 
