--- a/all/public/style.css
+++ b/all/public/style.css
@@ -81,3 +81,12 @@ left: 100px;; /* Other beautification stuff */
 width: 100%;
 color:white; 
 }
+hr.style-one {
+    border: 0;
+    height: 1px;
+    background: #333;
+    background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc);
+    background-image: -moz-linear-gradient(left, #ccc, #333, #ccc);
+    background-image: -ms-linear-gradient(left, #ccc, #333, #ccc);
+    background-image: -o-linear-gradient(left, #ccc, #333, #ccc);
+    }
