--- a/all/views/partials/footer.ejs
+++ b/all/views/partials/footer.ejs
@@ -14,11 +14,17 @@
           </li>
         </ul>
       </nav>
+      <hr class="style-one">
+     
 <div class="down"> 
-
-
-
+<div style="width:300px; margin:auto; margin-top:30px;padding-top:30px">
+    <img class="button" src="assets/fb.png" style="height: 40px; width:40px">
+  <img class="button" src="assets/insta.png" style="height: 40px; width:40px">
+  <img class="button" src="assets/twi.png" style="height: 40px; width:40px">
 </div>
+  
+</div>
+
 
 </body>
 </html>
