--- a/all/views/partials/header.ejs
+++ b/all/views/partials/header.ejs
@@ -7,9 +7,15 @@
     <title>Movie Mania!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    
   </head>
 <body>
+
   <nav class="navbar navbar-default navbar-inverse">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -87,7 +93,7 @@
               <li><a href="#">Edit Profile</a></li>
               <li><a href="#">Settings</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Logout</a></li>
+              <li><a href="/users/logout">Logout</a></li>
             </ul>
           </li>
         </ul>
@@ -97,14 +103,14 @@
     </div><!-- /.container-fluid -->
   </nav>
 
- 
+
 
 
 
 
 
                   <% if(success_msg){ %>
-                    <div class="alert alert-success"><%= success_msg %></div> 
+                 <div class="alert alert-success"><%= success_msg %></div> 
                   <% } else if(error_msg){ %>  
                     <div class="alert alert-warning"><%= error_msg %></div>
                   <% } else if(error){ %> 
@@ -126,4 +132,4 @@
  
         
 </div>
-
+<hr class="style-one">
