--- a/all/views/show.ejs
+++ b/all/views/show.ejs
@@ -25,10 +25,10 @@
 </div>
 
 <div class="pp">
-<div class="trailer-box">
+<div class="trailer-box" >
 
 
-      <iframe width="800" height="400" src="https://www.youtube.com/embed/<%= trailer.videos.results[0].key %>?rel=0&amp;start=5" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe width="100%" height="400" src="https://www.youtube.com/embed/<%= trailer.videos.results[0].key %>?rel=0&amp;start=5" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
      
 
 
