--- a/all/public/style.css
+++ b/all/public/style.css
@@ -1,5 +1,5 @@
 
-img{
+img.thumbnail{
 
   width: 100%;
  
@@ -9,8 +9,8 @@ background-color: black;
 width: 100%;
 height: 200px;
 }
-.search{
-
+.sel1{
+width: 5%;
     
 }
 .button{
@@ -90,3 +90,4 @@ hr.style-one {
     background-image: -ms-linear-gradient(left, #ccc, #333, #ccc);
     background-image: -o-linear-gradient(left, #ccc, #333, #ccc);
     }
+   
