--- a/all/public/style.css
+++ b/all/public/style.css
@@ -10,7 +10,7 @@ width: 100%;
 height: 200px;
 }
 .sel1{
-width: 5%;
+width: 100%;
     
 }
 .button{
@@ -90,4 +90,6 @@ hr.style-one {
     background-image: -ms-linear-gradient(left, #ccc, #333, #ccc);
     background-image: -o-linear-gradient(left, #ccc, #333, #ccc);
     }
-   
+   #myinp{
+       width: 100%
+   }
