--- a/all/views/index.ejs
+++ b/all/views/index.ejs
@@ -14,7 +14,7 @@
                       <div class="caption">
                     
       
-                  <img src="https://image.tmdb.org/t/p/w500<%= movie.poster_path %>" alt="" class="thumbnail">
+                  <img src="https://image.tmdb.org/t/p/w500<%= movie.poster_path %>" alt="" class="thumbnail" style="width:100%">
                 
                       <h3><%= movie.title %></h3>
                      
