--- a/all/views/partials/footer.ejs
+++ b/all/views/partials/footer.ejs
@@ -15,7 +15,7 @@
         </ul>
       </nav>
       <hr class="style-one">
-     
+    </div>
 <div class="down"> 
 <div style="width:300px; margin:auto; margin-top:30px;padding-top:30px">
     <img class="button" src="assets/fb.png" style="height: 40px; width:40px">
