--- a/all/views/partials/header.ejs
+++ b/all/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Movie Mania!</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script
     src="https://code.jquery.com/jquery-3.3.1.js"
@@ -74,7 +74,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">People
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a class="popular people" href="#">Popular People</a></li>
+                  <li><a class="popular people" href="/popular-people">Popular People</a></li>
                 </ul>
               </li>
 
@@ -87,7 +87,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">You
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">View Profile</a></li>
+              <li><a href="/users/dashboard">View Profile</a></li>
               <li><a href="#">Watchlist</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#">Edit Profile</a></li>
