--- a/all/views/show.ejs
+++ b/all/views/show.ejs
@@ -1,60 +1,80 @@
 <% include partials/header.ejs %>
-</div>
- <% console.dir(item) %>
- <div id="moviebox" >
-   <div class="row" style="border:4px solid black">
-<div class="col-md-4">
-        <img src="https://image.tmdb.org/t/p/w500<%= item.poster_path %>" alt="" >
-      
+      </div>
+      <% console.dir(item) %>
+            <div class="backimg" id="moviebox">
+                  <div class="row" style="border:4px solid black">
+                        <div class="col-md-4 frontimg">
+                              <img src="https://image.tmdb.org/t/p/w500<%= item.poster_path %>" alt="">
+                        </div>
+                        <!-- <div class="col-md-8 backimg">
+                              <div id="mydiv"> <img src="https://image.tmdb.org/t/p/w500<%= item.backdrop_path %>" style="position: relative;">
+                              </div>
+                        </div> -->
 
-</div>
-<div class="col-md-8">
-
-     <div id="mydiv">  <img src="https://image.tmdb.org/t/p/w500<%= item.backdrop_path %>" style="position: relative;">
-
-
-</div>
-       
- 
-
-    
-</div>
-
-   </div>
-
-</div>
-
-<div class="pp">
-<div class="trailer-box" >
-
-
-      <iframe width="100%" height="400" src="https://www.youtube.com/embed/<%= trailer.videos.results[0].key %>?rel=0&amp;start=5" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-     
-
-
-</div>
-     
-</div>
-
-
-<div>
-       <% reviews.results.forEach(function(review) { %>
-            <div class="col-sm-6 col-md-4 col-lg-4">
-            <h2><%= review.author %></h2>
-            <p><%= review.content %></p>
+                        <div class="divtext">
+                              <h1>
+                                    <%= item.title %>
+                              </h1>
+                              <h2>Release Date :
+                                    <%= item.release_date %>
+                              </h2>
+                              <h3>Overview</h3>
+                              <p class="overview">
+                                    <%= item.overview %>
+                              </p>
+                        </div>
+                  </div>
             </div>
-      
-      <% }) %> 
-
-    
-
-</div>
 
 
+            <div class="pp">
+                  <div class="trailer-box">
 
 
+                        <iframe width="100%" height="400" src="https://www.youtube.com/embed/<%= trailer.videos.results[0].key %>?rel=0&amp;start=5"
+                              frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 
 
+                  </div>
 
-<% include partials/footer.ejs %>
+            </div>
+
+            <div>
+                  <% reviews.results.forEach(function(review) { %>
+
+                        
+                        <div class="review col-sm-6 col-md-8 col-lg-10">
+                              <div class="panel panel-primary">
+                                    <div class="panel-heading">
+                                          <h3 class="panel-title">
+                                                <%= review.author %>
+                                          </h3>
+                                    </div>
+                                    <div class="panel-body">
+                                          <%= review.content %>
+                                    </div>
+                              </div>
+                        </div>
+
+                        <% }) %>
+
+            </div>
+
+            <style>
+                  .divtext {
+                        margin-left: 550px;
+                  }
+
+                  .overview {
+                        width: 800px;
+                  }
+
+                  .review
+                  {
+                        margin-left: 8%
+                  }
+
+            </style>
+
+            <% include partials/footer.ejs %>
