--- a/all/views/index.ejs
+++ b/all/views/index.ejs
@@ -1,6 +1,7 @@
 <% include partials/header.ejs %>
 
 <div class="a">
+  <div class="container">
         <h1>Top Rated Movies</h1>
         <div class="p">
       <div class="row" style="display: flex; flex-wrap: wrap">
@@ -39,5 +40,5 @@
 </div>
 </div>
 </div>
-
+</div>
 <% include partials/footer.ejs %>
