--- a/all/views/partials/footer.ejs
+++ b/all/views/partials/footer.ejs
@@ -1,17 +1,25 @@
 
+
+
+
+
+
+
+
 <nav aria-label="Bottom nav" id="bt">
         <ul class="pagination">
-          <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1">Previous</a>
-          </li>
-          <li class="page-item"><a class="page-link" href="/1">1</a></li>
+          
+          <li class="page-item"><a class="page-link" href="1">1</a></li>
           <li class="page-item">
-            <a class="page-link" href="/2">2</a>
+            <a class="page-link" href="2">2</a>
           </li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="">Next</a>
-          </li>
+          <li class="page-item"><a class="page-link" href="3">3</a></li>
+          <li class="page-item"><a class="page-link" href="3">4</a></li>
+          <li class="page-item"><a class="page-link" href="3">5</a></li>
+          <li class="page-item"><a class="page-link" href="3">6</a></li>
+          <li class="page-item"><a class="page-link" href="3">7</a></li>
+          <li class="page-item"><a class="page-link" href="3">8</a></li>
+          
         </ul>
       </nav>
       <hr class="style-one">
