--- a/all/views/partials/header.ejs
+++ b/all/views/partials/header.ejs
@@ -12,7 +12,7 @@
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
 <body>
 
@@ -28,14 +28,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Movie Mania</a>
+        <a class="navbar-brand" href="#">Movie Mania </a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
 
-          <li class="active"><a href="/movies/popular">Home<span class="sr-only">(current)</span></a></li>
+          <li class="active"><a href="/movies/popular/1">Home<span class="sr-only">(current)</span></a></li>
 
           <!-- <li><a href="#">Link</a></li> -->
 
@@ -52,10 +52,10 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Movies
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a class="popular-movies" href="/movies/popular">Popular</a></li>
-              <li><a class="top-rated-movies" href="/movies/top-rated">Top Rated</a></li>
-              <li><a class="upcoming-movies" href="/movies/upcoming">Upcoming</a></li>
-              <li><a class="now-playing-movies" href="/movies/now-playing">Now Playing</a></li>
+              <li><a class="popular-movies" href="/movies/popular/1">Popular</a></li>
+              <li><a class="top-rated-movies" href="/movies/top-rated/1">Top Rated</a></li>
+              <li><a class="upcoming-movies" href="/movies/upcoming/1">Upcoming</a></li>
+              <li><a class="now-playing-movies" href="/movies/now-playing/1">Now Playing</a></li>
             </ul>
           </li>
           
@@ -63,10 +63,10 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">TV Shows
                 <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                  <li><a class="popular-tv-shows" href="/tvshows/popular">Popular</a></li>
-                  <li><a class="top-rated-tv-shows" href="/tvshows/toprated">Top Rated</a></li>
-                  <li><a class="on-tv-tv-shows" href="/tvshows/airing-today">On TV</a></li>
-                  <li><a class="airing-today-tv-shows" href="/tvshows/airing-now">Airing Today</a></li>
+                  <li><a class="popular-tv-shows" href="/tvshows/popular/1">Popular</a></li>
+                  <li><a class="top-rated-tv-shows" href="/tvshows/toprated/1">Top Rated</a></li>
+                  <li><a class="on-tv-tv-shows" href="/tvshows/airing-today/1">On TV</a></li>
+                  <li><a class="airing-today-tv-shows" href="/tvshows/airing-now/1">Airing Today</a></li>
               </ul>
             </li>
 
@@ -74,7 +74,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">People
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a class="popular people" href="/popular-people">Popular People</a></li>
+                  <li><a class="popular people" href="/popular-people/1">Popular People</a></li>
                 </ul>
               </li>
 
@@ -87,7 +87,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">You
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/users/dashboard">View Profile</a></li>
+              <li><a href="/dashboard">View Profile</a></li>
               <li><a href="#">Watchlist</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#">Edit Profile</a></li>
