--- a/all/public/style.css
+++ b/all/public/style.css
@@ -1,4 +1,10 @@
+.p{
 
+    background: #FF512F;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #DD2476, #FF512F);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #DD2476, #FF512F); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+}
 img.thumbnail{
 
   width: 100%;
@@ -93,4 +99,13 @@ hr.style-one {
    #myinp{
        width: 100%
    }
-  
+  .rev{
+
+    font-family: 'Roboto', sans-serif;
+
+  }
+  .review-box{
+
+ margin-top:20px;
+
+  }
