--- a/all/views/dashboard.ejs
+++ b/all/views/dashboard.ejs
@@ -1,14 +1,26 @@
-<% include partials/header %>
+<% include partials/header1 %>
      
      <div class="row">
-          <div class="col-lg-12">
+        <h1>Welcome to your dashboard</h1>
+          <div class="col-md-4">
 
-<h1>Welcome to your dashboard</h1>
+
+<img src="assets/pic.jpg">
 
 
 
           </div>
+          <div class="col-md-8">
+
+
+              <h3>Your Email:</h3>
+              <h3>Your Username:</h3>
+              
+              
+              
+                        </div>
+         
   
         </div>
   
-        <% include partials/footer %>
+        <% include partials/footer1 %>
