--- a/all/views/dashboard.ejs
+++ b/all/views/dashboard.ejs
@@ -1,7 +1,7 @@
 <% include partials/header1 %>
      
      <div class="row">
-        <h1>Welcome to your dashboard</h1>
+        <h1>Welcome <%= name %> !</h1>
           <div class="col-md-4">
 
 
@@ -13,8 +13,8 @@
           <div class="col-md-8">
 
 
-              <h3>Your Email:</h3>
-              <h3>Your Username:</h3>
+              <h3>Your Username:    <%= Username %></h3>
+              <h3>Your Email:    <%= email %></h3>
               
               
               
@@ -22,5 +22,112 @@
          
   
         </div>
+        <h1>Your WatchList</h1>
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            
+              <% watchlist.forEach(function(wish){ %>
+  
+                  <% if(wish.poster_path==null){ %>
+  
+                      <% } else{ %>
+  
+                          <div class="swiper-slide">
+                              <div>
+                               
+                                  <% if(wish.poster_path==null){ %>
+                                      <% console.log("null") %>
+                                      <img src="https://image.tmdb.org/t/p/w500<%= wish.profile_path %>" alt="">
+                                      <% } else{ %>
+                                          <img src="https://image.tmdb.org/t/p/w500<%= wish.poster_path %>" alt="">
+                                          <% } %>
+                              </div>
+                              <div class="details">
+                                  <h3>
+                                      
+  
+  
+                                                                                            <br>
+                                                                                                     
+                                  </h3>
+                              </div>
+                          </div>
+  
+                          <% } %>
+                              <%  })  %>
+  
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+      </div>
+  
+      <style>
+          body {
+              background: #fff;
+              font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+              font-size: 14px;
+              color: #000;
+              margin: 0;
+              padding: 0;
+              /* background-color: black; */
+          }
+  
+          .swiper-container {
+              width: 100%;
+              padding-top: 50px;
+              padding-bottom: 50px;
+          }
+  
+          .swiper-slide {
+              background-position: center;
+              background-size: cover;
+              width: 300px;
+              height: 500px;
+          }
+  
+          img {
+              max-width: 100%;
+          }
+  
+          .details {
+              background-color: white;
+              text-align: center;
+              font-size: 15px;
+              font-weight: bolder;
+              font-family: 'Times New Roman', Times, serif;
+              overflow: hidden;
+              padding: 0px;
+          }
+      </style>
+  
+      <script>
+          var swiper = new Swiper('.swiper-container', {
+              effect: 'coverflow',
+              grabCursor: true,
+              centeredSlides: true,
+              slidesPerView: 'auto',
+              loop: true,
+              mousewheel: true,
+              autoplay: {
+                  delay: 2000,
+                  disableOnInteraction: false,
+              },
+              coverflowEffect: {
+                  rotate: 60,     //rotation
+                  stretch: 0,
+                  depth: 500,     //Depth
+                  modifier: 1,
+                  slideShadows: true,
+              },
+              pagination: {
+                  el: '.swiper-pagination',
+              },
+              navigation: {
+                  nextEl: '.swiper-button-next',
+                  prevEl: '.swiper-button-prev',
+              },
+          });
+      </script>
+  
   
         <% include partials/footer1 %>
