--- a/all/views/partials/header.ejs
+++ b/all/views/partials/header.ejs
@@ -13,6 +13,8 @@
     crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js" ></script>
   </head>
 <body>
 
@@ -47,7 +49,16 @@
               <li><a class="discover-tv-shows" href="/toprated-tvshows">TV Shows</a></li>
             </ul>
           </li>
-
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Trending
+              <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a class="trending-all" href="/trending-all/1">All</a></li>
+              <li><a class="trending-movies" href="/trending-movies/1">Movies</a></li>
+              <li><a class="trending-tv-shows" href="/trending-tvshows/1">TV Shows</a></li>
+              <li><a class="trending-people" href="/trending-people/1">People</a></li>
+            </ul>
+          </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Movies
               <span class="caret"></span></a>
@@ -88,7 +99,7 @@
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="/dashboard">View Profile</a></li>
-              <li><a href="#">Watchlist</a></li>
+            
               <li role="separator" class="divider"></li>
               <li><a href="#">Edit Profile</a></li>
               <li><a href="#">Settings</a></li>
