--- a/all/views/partials/header.ejs
+++ b/all/views/partials/header.ejs
@@ -92,8 +92,13 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/users/login">Login</a></li>
+          <% if(user){ %>
+            <li><a href="/dashboard">DashBoard</a></li>
+          <% } else{ %>
+              <li><a href="/users/login">Login</a></li>
           <li><a href="/users/register">Sign Up</a></li>
+         <% } %>
+          
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">You
               <span class="caret"></span></a>
