--- a/all/views/partials/header.ejs
+++ b/all/views/partials/header.ejs
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js" ></script>
   </head>
 <body>
-
+  <div class="ovi">
   <nav class="navbar navbar-default navbar-inverse">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
