--- a/all/views/partials/header1.ejs
+++ b/all/views/partials/header1.ejs
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js" ></script>
   </head>
 <body>
-
+  
   <nav class="navbar navbar-default navbar-inverse">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -119,7 +119,7 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-
+ 
   <div class="container">
   <% if(success_msg){ %>
     <div class="alert alert-success"><%= success_msg %></div> 
@@ -128,3 +128,4 @@
      <% } else if(error){ %> 
        <div class="alert alert-danger"><%= error %></div>
     <% } %>
+    <div class="ovi">
