--- a/all/views/partials/footer1.ejs
+++ b/all/views/partials/footer1.ejs
@@ -1717,6 +1717,7 @@ particlesJS('particles-js',
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
     z-index: 100;
     color: white;
 }
