--- a/all/views/partials/header.ejs
+++ b/all/views/partials/header.ejs
@@ -30,7 +30,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Movie Mania </a>
+        <a class="navbar-brand" href="/">Movie Mania </a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,8 +45,8 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Discover
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a class="discover-movies" href="#">Movies</a></li>
-              <li><a class="discover-tv-shows" href="/toprated-tvshows">TV Shows</a></li>
+              <li><a class="discover-movies" href="/discover-movies">Movies</a></li>
+              <li><a class="discover-tv-shows" href="/discover-tvshows">TV Shows</a></li>
             </ul>
           </li>
           <li class="dropdown">
