--- a/all/views/indextv.ejs
+++ b/all/views/indextv.ejs
@@ -2,7 +2,7 @@
 
 <div class="a">
   <div class="container">
-        <h1>Top Rated Tv</h1>
+        <h1><%= myhead %></h1>
         <div class="p">
       <div class="row" style="display: flex; flex-wrap: wrap">
 <% shows.results.forEach(function(show){ %>
