--- a/all/views/show.ejs
+++ b/all/views/show.ejs
@@ -48,7 +48,7 @@
                                                       <div class="col-sm-6 col-md-4 col-lg-2">
                                                             <div class="thumbnail">
                                                                   <div class="caption cast">
-                                                                        <img src="https://image.tmdb.org/t/p/w500<%= cast.profile_path %>" alt="<%= cast.name %>">
+                                                                        <img src="https://image.tmdb.org/t/p/w500<%= cast.profile_path %>" alt="<%= cast.name %> style="height:50%;width:50%">
                                                                         <h3>
                                                                               <%= cast.name %>
                                                                         </h3>
