--- a/all/views/trending.ejs
+++ b/all/views/trending.ejs
@@ -93,7 +93,7 @@
         }
 
         .details {
-  
+           
             text-align: center;
             font-size: 15px;
             font-weight: bolder;
@@ -101,6 +101,11 @@
             overflow: hidden;
             padding: 0px;
         }
+.details h3{
+color:white;
+
+}
+
     </style>
 
     <script>
