--- a/all/views/partials/header1.ejs
+++ b/all/views/partials/header1.ejs
@@ -30,14 +30,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Movie Mania </a>
+        <a class="navbar-brand" href="/">Cinema Visor</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
 
-          <li class="active"><a href="/movies/popular/1">Home<span class="sr-only">(current)</span></a></li>
+          <li><a href="/movies/popular/1">Home<span class="sr-only">(current)</span></a></li>
 
           <!-- <li><a href="#">Link</a></li> -->
 
@@ -99,7 +99,7 @@
               <li><a href="/users/login">Login</a></li>
           <li><a href="/users/register">Sign Up</a></li>
          <% } %>
-          
+         <li><a href="/discuss">Discuss</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">You
               <span class="caret"></span></a>
