Changed some colors

--- a/all/views/dashboard.ejs
+++ b/all/views/dashboard.ejs
@@ -98,6 +98,13 @@
               overflow: hidden;
               padding: 0px;
           }
+          h1{
+              color: white;
+          }
+          h3{
+
+            color:gray;
+          }
       </style>
   
       <script>
